# dbxio

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yml  tests.yml
dbxio/: __init__.py
dbxio/blobs/: __init__.py  block_upload.py  download.py  parquet.py
dbxio/core/: __init__.py  auth.py  client.py  credentials.py  exceptions.py  settings.py
dbxio/core/cloud/: __init__.py  exceptions.py
dbxio/core/cloud/aws/: __init__.py  object_storage.py
dbxio/core/cloud/azure/: __init__.py  object_storage.py
dbxio/core/cloud/client/: __init__.py  object_storage.py
dbxio/core/cloud/gcp/: __init__.py  object_storage.py
dbxio/core/cloud/nebius_over_azure/: __init__.py  object_storage.py
dbxio/delta/: __init__.py  parsers.py  query.py  sql_driver.py  sql_utils.py  table.py  table_commands.py  table_schema.py  types.py
dbxio/sql/: __init__.py  query.py  results.py  sql_driver.py  types.py
dbxio/utils/: __init__.py  blobs.py  databricks.py  env.py  http.py  logging.py  retries.py
dbxio/utils/object_storage/: __init__.py  _aws.py  _azure.py  _gcp.py  object_storage.py
dbxio/volume/: __init__.py  volume_commands.py
docs/: README.md  airflow.md  nebius.md
tests/: conftest.py  test_blob_block_upload.py  test_client.py  test_cloud_object_storage.py  test_complex_types.py  test_credentials.py  test_dbx_query.py  test_future_results.py  test_odbc_driver.py  test_pa_tables.py  test_parsers.py  test_primary_types.py  test_settings.py  test_sql_utils.py  test_statement_api_driver.py  test_table.py  test_table_commands.py  test_table_schema.py  test_utils_blobs.py  test_utils_databricks.py  test_utils_object_storage.py  test_utils_retries.py  test_volume.py  test_volume_commands.py
tests/mocks/: azure.py  odbc.py  sql.py
tests/mocks/databricks/sdk/service/: files.py
tests/resources/: arrow_stream_1_plus_1.arrow
